Updated: PMD correction